# modern-classics

./: .gitignore  CLAUDE.md  DEVLOG.md  LICENSE  Makefile  README.md  ROADMAP.md  about.md  assemble.py  assemble_democracy.py  build_about.py  build_ebook.py  build_feeds.py  chapter-script.py  chapter_prompt.0.txt  ebook_meta.json  index.html  initial_prompt.txt  prepare-text-analysis.py  prompt.00.txt  pyproject.toml  rebrand.py  splitter.py  translator.py  verify.py
autobiography/: agent_instructions.txt  env  manifest.json  must_contain.txt  prep.py  running_notes.txt  source.html  text_analysis.txt
candide/: env  footnotes.txt  text_analysis.txt
catos-letters/: agent_instructions.txt  env  manifest.json  must_contain.txt  prep.py  running_notes.txt  text_analysis.txt
common-sense/: build_html.py  common-sense.txt  env  splits  text_analysis.txt
de-officiis/: agent_instructions.txt  env  manifest.json  must_contain.txt  prep.py  running_notes.txt  source.txt  text_analysis.txt
decameron/: DEVLOG.md  build_html.py  code.py  download.py  env  flash-long.md  flash-small.md  pro.md  text_analysis.txt
decameron1/: env  splits  text_analysis.txt
decameron2/: text_analysis.txt
democracy/: democracy.txt  env  text_analysis.txt
democracy2/: build_html.py  chapter_manifest.txt  env  resplit.py  split_french.py  text_analysis.txt  tome1.txt  tome2.txt  tome3.txt  tome4.txt
descartes/: env  text_analysis.txt
dialogues/: build_html.py  env  extract_text.py  jowett_introductions.txt  text_analysis.txt
eighty-days/: agent_instructions.txt  env  manifest.json  (+4 more)
(+4916 files in other folders)
