[tool.poetry]
name = "modern-classics"
version = "0.1.0"
description = "Translator for old works for modern audiences."
authors = ["Alex Alemi <alexalemi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
anthropic = "^0.40.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
